This commit contains all the unit testing of models, service etc of train and Station both.